--- a/corrente.html
+++ b/corrente.html
@@ -89,7 +89,7 @@
                 <img src="static/img/corrente/letras.png" alt="LETRAS-128" class="w-full h-64 object-cover">
                 
                 <div class="p-6">
-                    <h3 class="text-2xl font-semibold text-gray-900 mb-2">Pinjente</h3>
+                    <h3 class="text-2xl font-semibold text-gray-900 mb-2">Pingente</h3>
                     <p class="text-sm text-gray-500 mb-4">Ref: LETRAS-128</p>
                     
                     <p class="text-gray-600 h-16 overflow-hidden mb-4">
@@ -166,7 +166,7 @@
     <!-- Rodapé -->
     <footer class="bg-gray-100 py-6 mt-10">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-gray-500 text-sm">
-            © 2025 [Nome da Sua Loja]. Todos os direitos reservados.
+            © 2025 Hevelyn. Todos os direitos reservados.
         </div>
     </footer>
 
