add mais produtos

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <!-- EXEMPLO DE PRODUTO 3: Colar Elos Grandes -->
             <div
                 class="product-card bg-white rounded-xl shadow-lg hover:shadow-xl transition duration-300 ease-in-out transform hover:scale-[1.02] overflow-hidden border border-gray-100">
-                <img src="static/img/brincos/4.png" alt="Colar de Elos Grandes" class="w-full h-64 object-cover">
+                <img src="static/img/brincos/BRN-CORACAO.png" alt="Colar de Elos Grandes" class="w-full h-64 object-cover">
 
                 <div class="p-6">
                     <h3 class="text-2xl font-semibold text-gray-900 mb-2">Brinco Coração Melt</h3>
